@@ -1,9 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.318 2008-06-20 20:54:30 guru Exp $
+	$Id: ChangeLog,v 1.319 2008-07-03 01:39:16 guru Exp $
 -----------------------------------------------------------------------------------------
 2005-06-20	pwessel
 	* mgd77/mgd77.c:	Now applies recalculation of fields requested by E77 flags
-				as part of reading netcdf mgd77+ files.
+				as part of reading netcdf mgd77+ files.  However, if the
+				original anomaly was NaN then we leave it as is.
 
 2005-06-13	pwessel
 	* grdimage.c:	Failed to determine boundary of projected grid with enough precision.
